# SPHERE-3

./: .gitignore  CMakeLists.txt  README.md  SPHERE-3.cpp  build_background_operator.cpp  compare_moshits.cpp  init_vis.mac  input.ini  test_background_calibration.cpp  test_background_operator.cpp  test_fast_background_sampler.cpp  vis.mac
.serena/: project.yml
configs/: collector_test.stl
docs/plans/: 2026-02-05-collector-geometry-refactor.md  2026-02-05-transfer-validation-design.md  2026-02-06-mt-migration-design.md  2026-02-06-mt-migration-plan.md  2026-02-06-ring-analysis-design.md  2026-03-08-batch-processing-design.md  2026-03-08-batch-processing-plan.md
docs/superpowers/plans/: 2026-03-23-binary-format-migration.md  2026-03-24-analytical-mirror.md
docs/superpowers/specs/: 2026-03-23-binary-format-migration-design.md  2026-03-24-analytical-mirror-design.md
include/: BackgroundOperator.hh  FastBackgroundSampler.hh  FileQueue.hh  MoshitReader.hh  MoshitWriter.hh  PhelReader.hh  SimConfig.hh  WorkerEventData.hh  sphmirrActionInitialization.hh  sphmirrCounters.hh  sphmirrDetectorConstruction.hh  sphmirrEventAction.hh  sphmirrHit.hh  sphmirrPhysicsList.hh  sphmirrPhysicsListMessenger.hh  sphmirrPrimaryGeneratorAction.hh  sphmirrPrimaryGeneratorMessenger.hh  sphmirrRunAction.hh  sphmirrSD.hh  sphmirrStackingAction.hh  sphmirrSteppingAction.hh  sphmirrSteppingVerbose.hh
scripts/: deploy.sh  run_all.sh  run_batch.py  run_one.sh
src/: BackgroundOperator.cc  FastBackgroundSampler.cc  FileQueue.cc  MoshitReader.cc  MoshitWriter.cc  PhelReader.cc  sphmirrActionInitialization.cc  sphmirrCounters.cc  sphmirrDetectorConstruction.cc  sphmirrDetectorConstruction.cc_bk  sphmirrEventAction.cc  sphmirrHit.cc  sphmirrPhysicsList.cc  sphmirrPhysicsListMessenger.cc  sphmirrPrimaryGeneratorAction.cc  sphmirrPrimaryGeneratorMessenger.cc  sphmirrRunAction.cc  sphmirrSD.cc  sphmirrStackingAction.cc  sphmirrSteppingAction.cc  sphmirrSteppingVerbose.cc
